--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,11 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "serviceWorker": true,
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/theme.scss"
             ],
             "scripts": []
           },
