--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/pwa": "^0.901.9",
     "@angular/router": "~8.2.0",
+    "@angular/service-worker": "8.2.9",
     "angularfire2": "^5.4.2",
     "firebase": "^7.14.2",
     "hammerjs": "^2.0.8",
